Harden MiraRTP async search safety and shared cooldowns